install intel_chipset.h header file and make intel_get_genx and intel_is_genx visible

--- a/intel/meson.build
+++ b/intel/meson.build
@@ -41,7 +41,7 @@ ext_libdrm_intel = declare_dependency(
 )
 
 install_headers(
-  'intel_bufmgr.h', 'intel_aub.h', 'intel_debug.h',
+  'intel_bufmgr.h', 'intel_chipset.h', 'intel_aub.h', 'intel_debug.h',
   subdir : 'libdrm',
 )
 
